<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_overview"
        android:icon="@drawable/ic_nav_overview"
        android:title="@string/nav_overview" />
    <item
        android:id="@+id/nav_accounts"
        android:icon="@drawable/ic_nav_accounts"
        android:title="@string/nav_accounts" />
    <item
        android:id="@+id/nav_add"
        android:icon="@drawable/ic_nav_add"
        android:title="@string/nav_add" />
    <item
        android:id="@+id/nav_report"
        android:icon="@drawable/ic_nav_report"
        android:title="@string/nav_report" />
    <item
        android:id="@+id/nav_more"
        android:icon="@drawable/ic_nav_more"
        android:title="@string/nav_more" />
</menu>
