<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    android:gravity="center_vertical"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/tvCategoryName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/default_category_other"
        android:textColor="@color/text_primary"
        android:textSize="13sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvCategoryPercent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:text="@string/default_percent_zero"
        android:textColor="@color/text_secondary"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/tvCategoryAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_money"
        android:textColor="@color/text_primary"
        android:textSize="13sp"
        android:textStyle="bold" />

</LinearLayout>
